# spark-lineage-collector

./: OpenLineage Spark Lineage Strategy.md  README.md  demo_lineage.py  pyproject.toml
src/spark_lineage_collector/: config.py  facets.py  resolvers.py  sanitization.py
tests/: test_config.py
tests/scenarios/: conftest.py  test_basic_lineage.py  test_caching.py  test_join_lineage.py  test_multi_destination.py
tests/scenarios/events/: lineage.json
tests/scenarios/input/table_a/: .part-00003-a2d165a2-1b05-4353-a4f4-07627458b6c4-c000.snappy.parquet.crc  .part-00007-a2d165a2-1b05-4353-a4f4-07627458b6c4-c000.snappy.parquet.crc  part-00003-a2d165a2-1b05-4353-a4f4-07627458b6c4-c000.snappy.parquet  part-00007-a2d165a2-1b05-4353-a4f4-07627458b6c4-c000.snappy.parquet
tests/scenarios/input/table_b/: .part-00000-7d6dfa8a-dffd-4e71-960e-5f8795dd296a-c000.snappy.parquet.crc  .part-00003-7d6dfa8a-dffd-4e71-960e-5f8795dd296a-c000.snappy.parquet.crc  .part-00007-7d6dfa8a-dffd-4e71-960e-5f8795dd296a-c000.snappy.parquet.crc  part-00000-7d6dfa8a-dffd-4e71-960e-5f8795dd296a-c000.snappy.parquet  part-00003-7d6dfa8a-dffd-4e71-960e-5f8795dd296a-c000.snappy.parquet  part-00007-7d6dfa8a-dffd-4e71-960e-5f8795dd296a-c000.snappy.parquet
tests/scenarios/output/caching_test/: .part-00003-e8c5cee8-228e-474e-9ba0-a4cd5d5be3f2-c000.json.crc  .part-00007-e8c5cee8-228e-474e-9ba0-a4cd5d5be3f2-c000.json.crc  part-00003-e8c5cee8-228e-474e-9ba0-a4cd5d5be3f2-c000.json  part-00007-e8c5cee8-228e-474e-9ba0-a4cd5d5be3f2-c000.json
(+11 files in other folders)
