[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark_lineage_collector"
version = "0.1.0"
description = "A library to configure OpenLineage for Spark with noise reduction strategies"
authors = [
  { name="Antigravity", email="antigravity@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark==3.5.0",
    "pytest>=7.4.4",
]

[project.urls]
"Homepage" = "https://github.com/example/spark-lineage-collector"
